--- a/main.tex
+++ b/main.tex
@@ -785,7 +785,7 @@ Similar to our approach, Dig \textit{et al.}~\cite{dig} use refactoring to intro
 \centering
 \subfigure[OpenMP] {
 \vspace{-6cm}
-\includegraphics[width=0.35\textwidth,angle=270]{figures/MatMult-Seq.pdf}
+\includegraphics[width=0.35\textwidth]{figures/MatMult-Seq.pdf}
  \label{fig:matMultSeq}
  }
  \subfigure[Intel TBB] {
